<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>ch.scaille</groupId>
		<artifactId>skylib-starter-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath />
	</parent>
	<version>${revision}</version>
	<groupId>ch.scaille.tcwriter</groupId>
	<artifactId>testcase-writer</artifactId>
	<packaging>pom</packaging>
	<modules>
		<module>api</module>
		<module>model</module>
		<module>core</module>
		<module>javatc-client</module>
		<module>javatc</module>
		<module>flowtc</module>
		<module>maven-plugin</module>
		<module>gui</module>
		<module>gui-it</module>
		<module>examples</module>
		<module>webapp</module>
	</modules>
	<properties>
		<java.version>25</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<sonar.exclusions>**/node_modules/**,**/generated/**</sonar.exclusions>
		<flatten>true</flatten>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<!-- for aspectj -->
						<useIncrementalCompilation>false</useIncrementalCompilation>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<complianceLevel>${maven.compiler.source}</complianceLevel>
						<encoding>${project.build.sourceEncoding}</encoding>
						<Xlint>ignore</Xlint>
						<aspectLibraries>
							<aspectLibrary>
								<groupId>ch.scaille.tcwriter</groupId>
								<artifactId>testcase-writer-javatc-client</artifactId>
							</aspectLibrary>
						</aspectLibraries>
						<verbose>true</verbose>
						<!-- this is important: start-->
						<forceAjcCompile>true</forceAjcCompile>
						<sources />
						<weaveDirectories>
							<weaveDirectory>${project.build.directory}/classes</weaveDirectory>
						</weaveDirectories>

					</configuration>
					<executions>
						<execution>
							<id>aop sources</id>
							<phase>compile</phase>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
						<execution>
							<id>aop test sources</id>
							<phase>test-compile</phase>
							<goals>
								<goal>test-compile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-api</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-model</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-javatc</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-javatc-client</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-gui</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-examples</artifactId>
				<version>${revision}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>lib-testing-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
	</dependencies>
</project>
